# java-llama.cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  Makefile.common  README.md  build-args.cmake  build-dylib.sh  build-so.sh  dockerfile  jnaerator.sh  pom.xml
.github/: build.bat  build.sh  build_cuda_linux.sh
.github/dockcross/: dockcross-android-arm  dockcross-android-arm64  dockcross-android-x86  dockcross-android-x86_64  dockcross-linux-arm64-lts  dockcross-manylinux2014-x64  dockcross-manylinux_2_28-x64  update.sh
.github/workflows/: build.yml  ci.yml  release.yaml
models/: README.md
scripts/: aarch64-linux-gnu-toolchain.cmake  arm-linux-gnueabihf-toolchain.cmake  build-dylib.sh  build-so.sh  build.bat  build.sh  jnaerator.sh  jni-signature
src/main/assembly/: cuda-linux.xml
src/main/cpp/: jllama.cpp  jllama.h  server.cpp  server.hpp  utils.cpp  utils.hpp
src/main/java/de/kherud/jllama/: ContextParameters.java  FileType.java  Grammar.java  GrammarElement.java  LlamaCpp.java  LogCallback.java  LogLevel.java  Main.java  NativeSize.java  NativeSizeByReference.java  ProgressCallback.java  QuantizationParameters.java  Timings.java  TokenData.java  TokenDataArray.java
src/main/java/de/kherud/llama/: CliParameters.java  ContextParameters.java  FileType.java  Grammar.java  GrammarElement.java  InferenceParameters.java  JsonParameters.java  JsonUtils.java  LlamaCpp.java  LlamaException.java  LlamaGrammar.java  LlamaIterable.java  LlamaIterator.java  LlamaLoader.java  LlamaModel.java  LlamaOutput.java  LogCallback.java  LogLevel.java  Main.java  ModelParameters.java  NativeSize.java  NativeSizeByReference.java  OSInfo.java  Pair.java  Parameters.java  ProcessRunner.java  ProgressCallback.java  QuantizationParameters.java  SliceableByteBuffer.java  SliceableIntBuffer.java  Timings.java  TokenData.java  TokenDataArray.java  TokenType.java  VocabularyType.java
src/main/java/de/kherud/llama/args/: CacheType.java  GpuSplitMode.java  InferenceParameters.java  JsonParameters.java  LogFormat.java  MiroStat.java  ModelParameters.java  NumaStrategy.java  PoolingType.java  RopeScalingType.java  Sampler.java
src/main/java/de/kherud/llama/foreign/: LlamaLibrary.java  NativeSize.java  NativeSizeByReference.java  llama_beam_view.java  llama_beams_state.java  llama_context_params.java  llama_grammar_element.java  llama_model_quantize_params.java  llama_timings.java  llama_token_data.java  llama_token_data_array.java
src/test/java/: Example.java  GrammarExample.java  MainExample.java
src/test/java/de/kherud/llama/: GrammarTest.java  KVCacheTests.java  LlamaChatModelTest.java  LlamaEmbedingModelTest.java  LlamaModelIT.java  LlamaModelInfillTest.java  LlamaModelTest.java  LlamaModelToolSupportTest.java  LlamaModelValidation.java  ModelResolver.java  ParallelTests.java  RerankingModelTest.java
src/test/java/examples/: GrammarExample.java  InfillExample.java  MainExample.java
src/test/resources/: java.gbnf  python.gbnf
